--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-# Core dependencies
-streamlit>=1.31.0
-openai>=1.12.0
-
-# Database
-sqlalchemy>=2.0.0
-pymysql>=1.1.0
-
-# Data manipulation and visualization
-pandas>=2.2.0
-matplotlib>=3.8.0
+streamlit
+openai
+sqlalchemy
+pymysql
+pandas
+matplotlib
+plotly
